Fix: TTF-1319 - bar close button gap
https://digitaltools.phe.org.uk/browse/TTF-1319

--- a/app/shared/components/Accent/style.scss
+++ b/app/shared/components/Accent/style.scss
@@ -92,7 +92,7 @@
     background-color: $footer-warning;
 
     @include media-breakpoint-up(sm) {
-      padding-right: 4rem;
+      padding-right: 5rem;
     }
   }
 
